# recognizer-tools

./: .gitignore  README.md  pyproject.toml
.github/workflows/: update-resources.yml
penguin_recognizer_tools/icon/: FileGetter.py  IconGetter.py  IconGetter_fullres.py  MultiServerIconPackUpdater.py  MultiUploader.py  decrypt.py
penguin_recognizer_tools/json/: JsonMaker.py  stage_index.json
